--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/mail_templates.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/mail_templates.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% load static %}
-{% block title %}{% translate "Send out emails" %}{% endblock %}
+{% block title %}{% translate "Mails" %}{% endblock %}
 {% block content %}
     <nav id="event-nav" class="header-nav">
         <div class="navigation">
