--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/outbox_form.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="submit-group">
-            <a class="btn btn-info" href="#">
+            <a class="btn btn-primary btn-lg" href="{% url 'plugins:sendmail:send' organizer=request.event.organizer.slug event=request.event.slug %}?copyToDraft={{ form.instance.id }}">
                 {% translate "Copy to draft" %}
             </a>
         </div>
